# textbook-marketplace

./: .gitignore  README.md  pyproject.toml
backend/textbook_marketplace/: .env.example
backend/textbook_marketplace/marketplace/: models.py  serializers.py  urls.py  views.py
backend/textbook_marketplace/marketplace/management/commands/: generate_fake_textbooks.py
backend/textbook_marketplace/marketplace/migrations/: 0001_initial.py  0002_textbook_image.py  0003_user_telegram_id_user_telephone_alter_user_username.py  0004_textbook_created_at_textbook_updated_at_and_more.py  0005_textbook_phone_contact_textbook_telegram_contact_and_more.py
backend/textbook_marketplace/textbook_marketplace/: settings.py  urls.py
frontend/: .gitignore  README.md  package.json  tailwind.config.js  vue.config.js
frontend/src/: App.vue  main.js  store.js
frontend/src/components/: AuthenticatedNavbar.vue  Expprofile.vue  HelloWorld.vue  Navbar.vue  Profile.vue  TextbookCard.vue  authetification.js  login.vue  logout.vue  signup.vue
frontend/src/components/cursor/: Rating.vue  TheLoader.vue  UserProfile.vue  UserRating.vue
frontend/src/pages/: Home.vue  NewTextbook.vue  Profile.vue  Textbook.vue  TextbookSearch.vue  index.vue
frontend/src/router/: index.js  router.js
frontend/src/services/: TextbookService.js  api.js  authService.js
frontend/src/store/: index.js
